# wallet_core

./: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
lib/: wallet_core.dart
lib/src/: identity_namespace.dart  master_key.dart  mobi.dart  nostr_signer.dart  onboard_namespace.dart  wallet_core.dart  wallet_namespace.dart
lib/src/identity/: identity_namespace.dart  wireguard_keys.dart
lib/src/nostr/: nostr_signer.dart
lib/src/onboarding/: onboard_namespace.dart
lib/src/vault/: vault_core_dart.dart  vault_core_ffi.dart  vault_namespace.dart
lib/src/vault/native/: Cargo.toml
lib/src/vault/native/src/: lib.rs
lib/src/wallet/: wallet_namespace.dart
test/: master_key_test.dart  mobi_test.dart  nostr_signer_test.dart
